<resources>
    <string name="app_name">MathCalculator</string>
    <string name="start">Start</string>
    <string name="next">Next</string>
    <string name="finish">Finish</string>
    <string name="error_given_result_empty">The given result is empty. Please provide a result</string>
    <string name="pointsUnit">points</string>
    <string name="correct_result_title">Correct:</string>
    <string name="wrong_result_title">Wrong:</string>
    <string name="total_result_title">Total:</string>
    <string name="minutes_short">m</string>
    <string name="minutes">minutes</string>
    <string name="seconds_short">s</string>
    <string name="seconds">seconds</string>
    <string name="config">Settings</string>
    <string name="title_activity_config">ConfigActivity</string>
    <string name="config_general_config">General configurations</string>
    <string name="config_number_of_exercises">Number of exercises</string>
    <string name="config_addition">Addition(+)</string>
    <string name="config_maximum_addition_number">Maximum addition number</string>
    <string name="config_extraction">Extraction(-)</string>
    <string name="config_multiplication">Multiplication(x)</string>
    <string name="config_maximum_extraction_number">Maximum extraction number</string>
    <string name="config_maximum_multiplication_number">Maximum multiplication number</string>
    <string name="calculate_time">Time:</string>
    <string name="calculate_title">Exercise %d of %d</string>
</resources>
