<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    >
    <data>
        <import type="android.view.View"/>
        <variable
            name="generalResult"
            type="com.jiahaoliuliu.mathcalculator.data.GeneralResult"
            />
    </data>
    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        card_view:cardElevation="4dp"
        card_view:cardCornerRadius="4dp"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        android:layout_marginLeft="5dp"
        android:layout_marginStart="5dp"
        android:layout_marginRight="5dp"
        android:layout_marginEnd="5dp"
        >
        <!-- Main calculation -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center"
            android:padding="20dp"
            >

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                >
                <!-- General points -->
                <TextView
                    android:id="@+id/generalPoints"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    tools:text="90"
                    android:textSize="50sp"
                    android:layout_centerHorizontal="true"
                    android:text="@{Integer.toString(generalResult.points)}"
                    />
                <!-- Points unit -->
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="10sp"
                    android:text="@string/pointsUnit"
                    android:layout_alignBaseline="@+id/generalPoints"
                    android:layout_toRightOf="@+id/generalPoints"
                    />
            </RelativeLayout>

            <!-- Separation lines -->
            <View
                android:layout_width="match_parent"
                android:layout_height="1px"
                android:background="@android:color/black"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                />

            <!-- Correct/Wrong results -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                >
                <!-- Total result -->
                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center"
                    >
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        style="@style/NormalText"
                        android:text="@string/total_result_title"
                        android:layout_marginRight="6dp"
                        />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        style="@style/NormalText"
                        android:text="@{Integer.toString(generalResult.totalNumberOfResults)}"
                        tools:text="50"
                        />
                </LinearLayout>
                <!-- Correct result -->
                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center"
                    >
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        style="@style/NormalText"
                        android:text="@string/correct_result_title"
                        android:layout_marginRight="6dp"
                        />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        style="@style/NormalText"
                        android:text="@{Integer.toString(generalResult.numberOfCorrectResults)}"
                        tools:text="30"
                        />
                </LinearLayout>
                <!-- Wrong result -->
                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center"
                    >
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        style="@style/NormalText"
                        android:text="@string/wrong_result_title"
                        android:layout_marginRight="6dp"
                        />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        style="@style/NormalText"
                        android:text="@{Integer.toString(generalResult.numberOfWrongResults)}"
                        tools:text="20"
                        />
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>
    </android.support.v7.widget.CardView>
</layout>