<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <import type="android.view.View"/>
        <variable
            name="totalTimer"
            type="com.jiahaoliuliu.mathcalculator.calculate.TotalTimer"
            />
        <variable
            name="mathOperationModel"
            type="com.jiahaoliuliu.mathcalculator.data.MathOperationModel"
            />
        <variable
            name="calculationClickListener"
            type="com.jiahaoliuliu.mathcalculator.calculate.CalculationClickListener"
            />
    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        >

        <!-- Timer -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="horizontal"
            android:gravity="right"
            android:padding="8dp"
            >
            <!-- minutes -->
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:padding="4dp"
                style="@style/Timer"
                tools:text="00"
                android:text="@{Integer.toString(totalTimer.minutes)}"
                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:padding="4dp"
                style="@style/Timer"
                tools:text="m"
                android:text="@string/minutes"
                />

            <!-- seconds -->
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:padding="4dp"
                style="@style/Timer"
                tools:text="00"
                android:text="@{Integer.toString(totalTimer.seconds)}"
                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:padding="4dp"
                style="@style/Timer"
                tools:text="s"
                android:text="@string/seconds"
                />

        </LinearLayout>

        <!-- Main calculation -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            style="@style/NormalText"
            android:layout_weight="5"
            >

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_weight="1"
                >
                <TextView
                    android:id="@+id/first_number"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.1"
                    style="@style/NormalText"
                    android:text="@{Integer.toString(mathOperationModel.firstNumber)}"
                    tools:text="50"
                    />

                <TextView
                    android:id="@+id/symbol"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.1"
                    style="@style/NormalText"
                    android:text="@{mathOperationModel.operation.symbol}"
                    tools:text="+"
                    />

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.1"
                    style="@style/NormalText"
                    android:text="@{Integer.toString(mathOperationModel.secondNumber)}"
                    tools:text="20"
                    />

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    style="@style/NormalText"
                    android:layout_weight="0.1"
                    android:text="="
                    />
            </LinearLayout>
            <EditText
                android:id="@+id/given_result"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.5"
                style="@style/NormalText"
                android:inputType="number"
                android:lines="1"
                android:imeOptions="actionNext"
                />
        </LinearLayout>

        <!-- Next button -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="horizontal"
            >

            <!-- Next Button -->
            <Button
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/next"
                android:visibility=
                    "@{!mathOperationModel.lastOperation? View.VISIBLE: View.GONE}"
                android:onClick="@{() -> calculationClickListener.onNextClicked()}"
                />

            <!-- Finish button -->
            <Button
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/finish"
                android:visibility="@{mathOperationModel.lastOperation? View.VISIBLE : View.GONE}"
                tools:visibility="gone"
                android:onClick="@{() -> calculationClickListener.onFinishClicked()}"
                />
        </LinearLayout>
    </LinearLayout>
</layout>